@@ -1,0 +1,71 @@
+#This file is part of Vulture OS.
+#
+
+########################## WARNING ###############################
+# Don't edit this file, it is automatically generated by Vulture #
+########################## WARNING ###############################
+
+
+#############
+## PORTALS ##
+#############
+frontend portals-proxy
+    bind unix@/var/sockets/haproxy/portals.sock
+    mode http
+    default_backend cluster-portal-servers
+
+backend cluster-portal-servers
+    mode http
+    option tcp-check
+    # Tells Haproxy to cleanly terminate each TCP connection during healthchecking
+    # Avoid hanging connections for some services (noticed on gunicorn)
+    tcp-check connect linger
+
+    # Load-Balance between cluster nodes
+    server srv-portal_{{ my_node.name }} portal:9000 ssl crt /var/db/pki/node.pem ca-file /var/db/pki/ca.pem check inter 5s
+    {% for node in other_nodes -%}
+    server srv-portal_{{ node.name }} {{node.name}}:9000 ssl crt {{node.get_certificate().bundle_filename}} ca-file /var/db/pki/ca.pem check inter 5s
+    {% endfor %}
+
+
+
+###########
+## REDIS ##
+###########
+frontend redis-proxy
+    enabled
+    bind 0.0.0.0:6379
+    mode tcp
+
+    timeout client  5s
+    option tcp-smart-accept
+
+    use_backend cluster-redis-servers
+
+backend cluster-redis-servers
+    enabled
+
+    mode tcp
+
+    timeout connect 1s
+    timeout server 5s
+
+    option tcp-smart-connect
+    option srvtcpka
+
+    option tcp-check
+    tcp-check comment PING\ phase
+    tcp-check send PING\r\n
+    tcp-check expect string +PONG
+    tcp-check comment role\ check
+    tcp-check send info\ replication\r\n
+    tcp-check expect on-error "Node is a replica" string role:master
+    tcp-check comment QUIT\ phase
+    tcp-check send QUIT\r\n
+    tcp-check expect string +OK
+
+    server srv-redis_{{ my_node.name }} redis:6379 check port 6379 fastinter 1000ms fall 3 rise 3 on-marked-down shutdown-sessions
+    {% for node in other_nodes -%}
+    server srv-redis_{{ node.name }} {{node.name}}:6379 check port 6379 fastinter 1000ms fall 3 rise 3 on-marked-down shutdown-sessions
+    {% endfor %}
+
