@@ -70,6 +70,7 @@ nat proto tcp from 127.0.0.3 to {{n.management_ip}} port 6379  -> {{node.managem
 nat proto tcp from 127.0.0.3 to {{n.management_ip}} port 26379 -> {{node.management_ip}} # Sentinel cluster interconnection
 nat proto tcp from 127.0.0.4 to {{n.management_ip}} port 9091 -> {{node.management_ip}}  # Rsyslog -> Mongodb cluster
 nat proto tcp from 127.0.0.5 to {{n.management_ip}} port 9000 -> {{node.management_ip}}  # HAProxy -> Portal cluster
+nat proto tcp from 127.0.0.5 to {{n.management_ip}} port 6379 -> {{node.management_ip}}  # HAProxy -> Redis cluster
 {% endfor %}
 {% endif %}
 
